prepare project structure

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,6 +8,10 @@
       <li class="nav-item">
         <a href="./page-3.html" class="nav-link">Page 3</a>
       </li>
+
+      <li class="nav-item">
+        <a href="./page-4.html" class="nav-link">Page 4</a>
+      </li>
     </ul>
   </nav>
 </header>
