--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,5 +7,6 @@
 
 /* COMPONENTS */
 @import url('./header.css');
+@import url('./section-dz.css';
 @import url('./hero.css');
 @import url('./vite-promo.css');
