--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,7 @@
 @import url('./reset.css');
 
 /* COMPONENTS */
+@import url('./section-vp.css');
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./vite-promo.css');
